--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
   <header class="wrap">
     <h1>Portal SiqueiraX</h1>
-    <p>Central de acesso rápido • Stats ao vivo • Links essenciais</p>
+    <p>Maior central de gamemodes do GTA SA:MP</p>
   </header>
 
   <main class="wrap" aria-label="Conteúdo principal">
@@ -365,13 +365,7 @@
       </div>
     </section>
 
-    <section class="center-card" aria-label="Destaque">
-      <h2>Acesso rápido e organizado</h2>
-      <p>
-        Use os botões laterais para navegar. No mobile, os botões ficam em grade e o
-        <strong>Painel SiqueiraX</strong> aparece primeiro.
-      </p>
-    </section>
+  
   </main>
 
   <!-- MENU ESQUERDO -->
