--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portal SiqueiraX</title>
 
+  <link rel="icon" type="https://i.imgur.com/eKjFtd1.png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="https://i.imgur.com/eKjFtd1.png" sizes="16x16" href="/favicon-16x16.png">
+
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
