--- a/login.html
+++ b/login.html
@@ -7,6 +7,10 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;800&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+
+<link rel="icon" href="https://i.imgur.com/eKjFtd1.png" sizes="32x32" type="image/png">
+<link rel="apple-touch-icon" href="https://i.imgur.com/eKjFtd1.png">
+
 <style>
 :root{
   --red:#ff002b;
