--- a/gamemodes.html
+++ b/gamemodes.html
@@ -5,6 +5,9 @@
 <title>Gamemodes • Portal SiqueiraX</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<link rel="icon" href="https://i.imgur.com/eKjFtd1.png" sizes="32x32" type="image/png">
+<link rel="apple-touch-icon" href="https://i.imgur.com/eKjFtd1.png">
+
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
 <style>
