--- a/painelsiqueirax.html
+++ b/painelsiqueirax.html
@@ -349,9 +349,9 @@ try {
     // tira o cache por enquanto pra não interferir
   })
 
-  console.log("me_vip status:", r.status)
+  console.log("me status:", r.status)
   const raw = await r.text()
-  console.log("me_vip body:", raw)
+  console.log("me body:", raw)
 
   if (!r.ok) throw new Error("HTTP " + r.status)
 
