--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
     </a>
 
     <!-- PRINCIPAL -->
-    <a href="login.html" class="menu-btn primary" aria-label="Painel SiqueiraX (principal)">
+    <a href="loginpainel.html" class="menu-btn primary" aria-label="Painel SiqueiraX (principal)">
       <i class="fas fa-gamepad"></i> Painel SiqueiraX
       <span class="tag">PRINCIPAL</span>
     </a>
