--- a/loginpainel.html
+++ b/loginpainel.html
@@ -124,7 +124,7 @@ body::before{
   }
 
   document.getElementById("btnLogin").onclick = () => {
-    window.location.href = "/.netlify/functions/discordloginpainel?return=/painel.html"
+    window.location.href = "/.netlify/functions/discordloginpainel?return=/painelsiqueirax.html"
   }
 </script>
 </body>
